# mac-setup-playbook

./: .gitignore  .pre-commit-config.yaml  README.md  ansible.cfg  hosts  initialize.sh  main.yml  pyproject.toml  requirements.yml
tasks/: macos-defaults.yml
vars/: default.config.yml
